fix/adjust spacing on content splash sections

--- a/public/less/style.less
+++ b/public/less/style.less
@@ -279,9 +279,9 @@ h2.header-osmi-box {
 }
 
 .content-container {
-  padding-top: 2em;
-  padding-bottom: 2em;
-  @media (min-width: @screen-sm-min) {
+  padding-top: 5em;
+  padding-bottom: 5em;
+  @media (max-width: @screen-xs-max) {
     padding-top: 1em;
     padding-bottom: 1em;
   }
